# brainsynth

./: README.md  pyproject.toml  synthesizer_configuration.py
.github/workflows/: main.yaml
brainsynth/: __init__.py  dataloader.py  dataset.py  prepare_freesurfer_data.py  process_additional_images.py  spatial_utils.py  supersynth_utils.py  synthesizer.py  synthesizer2.py  synthesizer_new.py  synthesizer_old.py  synthesizer_test.py  transforms.py  utilities.py
brainsynth/config/: __init__.py  augmentation.py  augmentation_configuration.py  builder_default.py  builder_exvivo.py  builders.py  config.py  dataset.py  pipelines.py  synthesizer.py  synthesizer.yaml  synthesizer_builder.py  synthesizer_no_synth.yaml  utilities.py
brainsynth/constants/: __init__.py  brainseg_with_extracerebral.lut  constants.py  filenames.py
brainsynth/constants/lut/: brainseg.lut  freesurfer.py
brainsynth/resources/: __init__.py  left-to-right.lta
brainsynth/transforms/: __init__.py  base.py  contrast.py  filters.py  label.py  misc.py  resolution_sampler.py  spatial.py  utilities.py  utils.py
tools/: align_template_to_subject.py  align_template_to_subject.sh  compute_mni_registration.sh  estimate_brain_mni305_to_ras_affines.py  gen_labels_w_distance_encoding.py  gen_labels_w_distance_encoding.sh  mgh_surface_prep.py  prepare_dataset.sh  prepare_mni2ras_transform.py  prepare_other.py  prepare_reconall.sh  prepare_surfaces.py  prepare_t1w.py  prepare_template.py  resample_surfaces.py  resample_surfaces.sh  resample_to_mni.py  sbatch_resample_to_mni.sh  synth_checker.py  torch_vertices_to_freesurfer_surface.py  transform_template.py
