[project]
name = "BrainSynth"
version = "0.1a"
description = "Tool for generating synthetic images of the brain and head from segmentations."
maintainers = [
    {name = "Jesper Duemose Nielsen"}
]
requires-python = ">=3.11"
dependencies = [
    "nibabel >= 5.1",
    "numpy >= 2",
    "scipy >= 1.11",
    "torch >= 2",
]

[project.optional-dependencies]
generate = [
    "scikit-learn >= 1.3",
    "surfa >= 0.6",
]

[tool.setuptools]
packages = ["brainsynth"]

[tool.setuptools.package-data]
brainsynth = [
    "resources/lh.white.smooth",
    "resources/rh.white.smooth",
    "constants/lut/brainseg.lut",
    "constants/lut/brainseg_with_extracerebral.lut",
]
