[project]
name = "BrainSynth"
version = "0.1"
description = "Tool for generating synthetic images of the brain and head from segmentations."
maintainers = [{ name = "Jesper Duemose Nielsen" }]
requires-python = ">=3.11"
dependencies = [
    "nibabel >= 5.1",
    "numpy >= 1.26",
    "scipy >= 1.11",
    "torch >= 2.1",
]

[build-system]
requires = ["setuptools>=69.2", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
generate = ["scikit-learn >= 1.3", "surfa >= 0.6"]

[tool.setuptools.package-data]
brainsynth = [
    "resources/template/surf/lh.white",
    "resources/template/surf/lh.sphere.reg",
    "resources/template/surf/rh.white",
    "resources/template/surf/rh.sphere.reg",
    # "resources/template/label/*"
    # "resources/template/surf/*"
    "constants/lut/brainseg.lut",
    "constants/lut/brainseg_with_extracerebral.lut",
]
